# crypto-data-platform

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  docker-compose.yaml  dockerfile  pyproject.toml
.github/worflows/: ci.yaml  ci.yml
alembic/: env.py
alembic/versions/: 9eefa8355aed_create_trade_table.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  health.py  trade.py
app/core/: constants.py  database.py  logging.py  settings.py
app/models/: trade.py
app/repositories/: trade_repository.py
app/schema/: trade.py
app/services/: trade_service.py
docs/: ADRS.md  ARCHITECTURE.md  DATA_DICTIONARY.md
tests/: api_client.py  config.py  conftest.py
tests/api/: conftest.py  test_api.py
tests/service/: test_trade_service.py
tests/unit/: test_transform.py
worker/: trade_pipeline.py
